Fix footer alignment

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -111,8 +111,9 @@ a, a:hover {
 	position: relative;
 	top: -0.1em;
 }
-.footer {
+footer.description {
 	margin-top: 2rem;
+	text-align: center;
 }
 
 /* Layout formatting */
